--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,54 @@
-appdirs==1.4.4
-argh==0.26.2
-atomicwrites==1.4.0
-backports.weakref==1.0.post1
-bkcharts==0.2
-black==19.10b0
-boto==2.49.0
-brotlipy==0.7.0
-certifi==2021.10.8
-click==8.0.3
-conda-build==3.21.5
-conda-verify==3.4.2
+absl-py==0.9.0
+astunparse==1.6.3
+cachetools==4.1.1
+certifi==2020.12.5
+chardet==3.0.4
+click==7.1.2
+cloudpickle==1.6.0
 cycler==0.10.0
-cytoolz==0.11.0
-daal4py==2021.3.0
-dask==2021.10.0
-entrypoints==0.3
-et-xmlfile==1.1.0
-fonttools==4.25.0
-gmpy2==2.0.8
-inflection==0.5.1
-install==1.3.5
-llvmlite==0.37.0
-locket==0.2.1
-matplotlib==3.5.2
-mccabe==0.6.1
-mkl-fft==1.3.1
-mkl-service==2.4.0
-mpmath==1.2.1
-munkres==1.1.4
-mypy-extensions==0.4.3
-navigator-updater==0.2.1
-nltk==3.6.5
+decorator==4.4.2
+Flask==1.1.2
+future==0.18.2
+google-auth==1.20.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.30.0
+h5py==2.10.0
+hyperopt==0.2.5
+idna==2.10
+itsdangerous==1.1.0
+joblib==1.0.1
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.3.4
+networkx==2.5
+numpy==1.19.5
+oauthlib==3.1.0
+opt-einsum==3.2.1
 pandas==1.3.4
-pathspec==0.7.0
-patsy==0.5.2
-pep8==1.7.1
-Pillow==8.4.0
-pkginfo==1.7.1
-ply==3.11
-pycosat==0.6.3
-pycurl==7.44.1
-pyls-spyder==0.4.0
-pyodbc===4.0.0-unsupported
-pytest==6.2.4
-python-lsp-jsonrpc==1.0.0
-python-lsp-server==1.2.4
-pytz==2021.3
+Pillow==8.1.2
+protobuf==3.12.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
 pywebio==1.6.1
-PyYAML==6.0
-scikit-image==0.18.3
-scikit-learn-intelex==2021.20210714.100439
-simplegeneric==0.8.1
-sip==4.19.13
-Sphinx==4.2.0
-spotipy==2.19.0
-tabulate==0.8.9
-TBB==0.2terminado==0.9.4
-ua-parser==0.15.0
-unicodecsv==0.14.1
-urllib3==1.26.7
-user-agents==2.2.0
-webencodings==0.5.1
-xlwings==0.24.9
-xlwt==1.3.0
-zict==2.0.0
-zope.event==4.5.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.6
+scikit-learn==0.24.1
+scipy==1.5.4
+seaborn==0.11.1
+six==1.15.0
+sklearn==0.0
+tensorboard-plugin-wit==1.7.0
+termcolor==1.1.0
+threadpoolctl==2.1.0
+tqdm==4.59.0
+urllib3==1.26.4
+Werkzeug==1.0.1
+wincertstore==0.2
+wrapt==1.12.1
