--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 
 pandas==1.3.4
 pywebio==1.6.1
+click==8.0.3
+matplotlib==3.5.2
+PyYAML==6.0
+Jinja2==3.0.3
+sphinx==3.*
+sphinx-tabs
+sphinx-rtd-theme==0.4.*
+sphinx-toolbox==2.15.0
